--- a/chi/extract_to_md.ipynb
+++ b/chi/extract_to_md.ipynb
@@ -78,17 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'id': 'chatcmpl-9u2A3GrLzwjylNl2sLY4oPpERxHII', 'object': 'chat.completion', 'created': 1723141703, 'model': 'gpt-4o-mini-2024-07-18', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': '```markdown\\n# Contents\\n\\n1. Introduction ......................................................... 3\\n\\n2. Pretraining .......................................................... 5  \\n   2.1 Pretraining Data ................................................. 5  \\n   2.2 Training Details ................................................. 5  \\n   2.3 LLAMA 2 Pretrained Model Evaluation ............................... 7  \\n\\n3. Fine-tuning ........................................................... 8  \\n   3.1 Supervised Fine-Tuning (SFT) ..................................... 9  \\n   3.2 Reinforcement Learning with Human Feedback (RLHF) .................. 9  \\n   3.3 System Message for Multi-Turn Consistency ........................ 16  \\n   3.4 RLHF Results .................................................... 17  \\n\\n4. Safety ............................................................... 20  \\n   4.1 Safety in Pretraining ............................................ 20  \\n   4.2 Safety Fine-Tuning ............................................... 23  \\n   4.3 Red Teaming ..................................................... 28  \\n   4.4 Safety Evaluation of LLAMA 2-CHAT ............................... 29  \\n\\n5. Discussion ........................................................... 32  \\n   5.1 Learnings and Observations ....................................... 32  \\n   5.2 Limitations and Ethical Considerations ............................ 34  \\n   5.3 Responsible Release Strategy .................................... 35  \\n\\n6. Related Work ......................................................... 35  \\n\\n7. Conclusion ........................................................... 36  \\n\\nA. Appendix ............................................................ 46  \\n   A.1 Contributions ................................................... 46  \\n   A.2 Additional Details for Pretraining ............................... 47  \\n   A.3 Additional Details for Fine-tuning ................................ 51  \\n   A.4 Additional Details for Safety .................................... 58  \\n   A.5 Data Annotation .................................................. 72  \\n   A.6 Dataset Contamination .......................................... 75  \\n   A.7 Model Card ....................................................... 77  \\n```', 'refusal': None}, 'logprobs': None, 'finish_reason': 'stop'}], 'usage': {'prompt_tokens': 25516, 'completion_tokens': 397, 'total_tokens': 25913}, 'system_fingerprint': 'fp_507c9469a1'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import base64\n",
     "import requests\n",
@@ -144,12 +136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'error': {'message': 'The model produced invalid content. Consider modifying your prompt if you are seeing this error persistently.', 'type': 'model_error', 'param': None, 'code': None}}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import os\n",
+    "\n",
+    "output_directory_path='./llama2/'\n",
     "\n",
     "def list_png_files(folder_path):\n",
     "    # Get the list of all files in the specified folder\n",
@@ -162,20 +164,39 @@
     "\n",
     "image_paths=list_png_files(output_directory_path)\n",
     "\n",
-    "api_key = ''\n",
+    "\n",
     "\n",
     "for image_path in image_paths:\n",
+    "    if os.path.exists(image_path.replace('.png', '.md')):\n",
+    "        continue\n",
     "    r = extract_content_from_image(image_path, api_key)\n",
-    "    md = r['choices'][0]['message']['content']\n",
-    "    with open(image_path.replace('.png', '.md'), 'w') as f:\n",
-    "        f.write(md)     \n",
+    "    if 'choices' in r:\n",
+    "        md = r['choices'][0]['message']['content']\n",
+    "        with open(image_path.replace('.png', '.md'), 'w') as f:\n",
+    "            f.write(md)  \n",
+    "    else:\n",
+    "        print(r)\n",
     "    "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
