--- a/chi/extract_to_md.ipynb
+++ b/chi/extract_to_md.ipynb
@@ -153,16 +153,78 @@
     "\n",
     "output_directory_path='./llama2/'\n",
     "\n",
-    "def list_png_files(folder_path):\n",
+    "def list_ext_files(folder_path, ext='.png'):\n",
     "    # Get the list of all files in the specified folder\n",
     "    files = os.listdir(folder_path)\n",
     "            \n",
     "    # Filter the list to include only .png files\n",
-    "    png_files = [os.path.join(folder_path, file) for file in files if file.endswith('.png')]\n",
+    "    png_files = [os.path.join(folder_path, file) for file in files if file.endswith(ext)]\n",
     "                        \n",
     "    return png_files\n",
     "\n",
-    "image_paths=list_png_files(output_directory_path)\n",
+    "image_paths=list_ext_files(output_directory_path)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for image_path in image_paths:\n",
+    "    if os.path.exists(image_path.replace('.png', '.md')):\n",
+    "        continue\n",
+    "    r = extract_content_from_image(image_path, api_key)\n",
+    "    if 'choices' in r:\n",
+    "        md = r['choices'][0]['message']['content']\n",
+    "        with open(image_path.replace('.png', '.md'), 'w') as f:\n",
+    "            f.write(md)  \n",
+    "    else:\n",
+    "        print(r)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fldr = './llama2'\n",
+    "mdf = os.listdir('./llama2')\n",
+    "mdf = [f for f in mdf if f.endswith('.md')]\n",
+    "for f in mdf:\n",
+    "    with open(os.path.join(fldr, f), 'r') as fd:\n",
+    "        md = fd.read()\n",
+    "    md = md.replace('```markdown', '').replace('```', '').replace(\"Here's the extracted content in markdown format:\", '')\n",
+    "    with open(os.path.join(fldr, f), 'w') as fd:\n",
+    "        fd.write(md)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'error': {'message': 'The model produced invalid content. Consider modifying your prompt if you are seeing this error persistently.', 'type': 'model_error', 'param': None, 'code': None}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import os\n",
+    "\n",
+    "output_directory_path='./llama2/'\n",
+    "\n",
+    "def list_ext_files(folder_path, ext='.png'):\n",
+    "    # Get the list of all files in the specified folder\n",
+    "    files = os.listdir(folder_path)\n",
+    "            \n",
+    "    # Filter the list to include only .png files\n",
+    "    png_files = [os.path.join(folder_path, file) for file in files if file.endswith(ext)]\n",
+    "                        \n",
+    "    return png_files\n",
+    "\n",
+    "image_paths=list_ext_files(output_directory_path)\n",
     "\n",
     "\n",
     "\n",
